--- a/explore.ipynb
+++ b/explore.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "(4, list)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,13 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'dict'>  6  dict_keys(['label', 'text', 'points', 'group_id', 'shape_type', 'flags'])\n",
       "{'flags': {},\n",
       " 'group_id': None,\n",
       " 'label': 'human',\n",
@@ -808,23 +809,11 @@
       " 'shape_type': 'polygon',\n",
       " 'text': ''}\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(dict,\n",
-       " 6,\n",
-       " dict_keys(['label', 'text', 'points', 'group_id', 'shape_type', 'flags']))"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pp.pprint(data[\"shapes\"][0])\n",
-    "type(data[\"shapes\"][0]),len(data[\"shapes\"][0]),data[\"shapes\"][0].keys()"
+    "print(type(data[\"shapes\"][0]),len(data[\"shapes\"][0]),data[\"shapes\"][0].keys(),sep=\"  \")\n",
+    "pp.pprint(data[\"shapes\"][0])"
    ]
   },
   {
@@ -836,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +906,7 @@
        "  [138.0, 397.0]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1146,7 @@
        " -0.34421296296296294)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1194,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1192,7 @@
        "ordereddict([('path', 'C:/Users/P1900/OneDrive/桌面/三维重建实验/目标检测代码/yolo_mine/dataset/pomelo_handcraft'), ('train', './train'), ('val', './val'), ('test', './test'), ('names', ordereddict([(0, 'human'), (1, 'bus')]))])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1218,7 @@
        "ordereddict([(0, 'human'), (1, 'bus')])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,6 +1226,25 @@
    "source": [
     "target_labels=config[\"names\"]\n",
     "target_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'human': 0, 'bus': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_config_names = {v:k for k,v in config[\"names\"].items()}\n",
+    "\n",
+    "print(new_config_names)"
    ]
   }
  ],
